separate nav.html from js

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ ReactDOM.render(<Root />, document.getElementById('root'))
 
 <script>
 $(document).ready(function(){
-  $("#nav").load("http://haydenyap.com");
+  $("#nav").load("https://rawgit.com/HaydenYap/Personal-Webpage/master/nav.html");
 })
 </script>
+
+<script type="text/babel" src="https://rawgit.com/HaydenYap/Personal-Webpage/master/scripts/nav.js"> </script>
