--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.7/react-redux.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 
@@ -31,12 +31,6 @@
 }
 
 ReactDOM.render(<Root />, document.getElementById('root'))
-</script>
-
-<script>
-$(document).ready(function(){
-  $("#nav").load("https://rawgit.com/HaydenYap/Personal-Webpage/master/nav.html");
-})
 </script>
 
 <script type="text/babel" src="https://rawgit.com/HaydenYap/Personal-Webpage/master/scripts/nav.js"> </script>
