--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.7/react-redux.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
+  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 
 <div id="nav"></div>
-<div id="root"></div>
-<div id="root2"></div>
+<div id="index"></div>
 
 <script type="text/babel">
+
+  const title="Hayden Yap"
+  const subTitle="Web Designer, Gamer and Tech Enthusiast"
+  
+
   class Root extends React.Component{
   constructor(props){
     super(props);
@@ -30,7 +35,7 @@
   }
 }
 
-ReactDOM.render(<Root />, document.getElementById('root'))
+ReactDOM.render(<Root />, document.getElementById('index'))
 </script>
 
 <script type="text/babel" src="https://rawgit.com/HaydenYap/Personal-Webpage/master/scripts/nav.js"> </script>
