Project nearly complete
Most additional web pages added. This is a safe point before website launch

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         Hello I'm Hayden Yap, welcome to my personal website. I am a Computer Science Student studying at the
         <a href="https://uwaterloo.ca/"><b>University Of Waterloo</b></a>. I've had a keen interest in computers since the 8th
         grade. It started off as an interest in hardware specifically since I built my first computer at around that time.
-        Towards the end of my junior year, I started to learn <b>Java</b> using the <b>Ready to Program</b> IDE. Since then, coding has
+        Towards the end of my junior year, I started to learn Java using the Ready to Program IDE. Since then, coding has
         transcended from simply a hobby to a career path.
         `
       },
