minor bug fixes
fixed some typos in nav.js that caused 404 errors. Fixed script src from rawgit to amazon aws local files

--- a/projects/Web-Pages/Tribute-Page/index.html
+++ b/projects/Web-Pages/Tribute-Page/index.html
@@ -57,5 +57,5 @@
         <h3>To read more about Hideo Kojima, visit his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Hideo_Kojima" target="_blank">wikipedia page<a>.<h3>
       </div>
     </div>
-    <script type="text/babel" src="https://rawgit.com/HaydenYap/Personal-Webpage/master/scripts/nav.js"> </script>
+    <script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"> </script>
 </html>
