--- a/projects/Web-Pages/Survey-Form-Page/index.html
+++ b/projects/Web-Pages/Survey-Form-Page/index.html
@@ -112,5 +112,5 @@
     </div>
   </div>
 
-  <script type="text/babel" src="https://rawgit.com/HaydenYap/Personal-Webpage/master/scripts/nav.js"> </script>
+  <script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"> </script>
 </html>
