--- a/projects/Web-Pages/Technical-Documentation-Page/index.html
+++ b/projects/Web-Pages/Technical-Documentation-Page/index.html
@@ -122,5 +122,5 @@
         </div>
       </div>
     </body>
-  <script type="text/babel" src="https://rawgit.com/HaydenYap/Personal-Webpage/master/scripts/nav.js"> </script>
+    <script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"> </script>
 </html>
