--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.0/redux.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.7/react-redux.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/newNav.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
 </head>
@@ -16,5 +21,259 @@
 <div id="nav"></div>
 <div id="root"></div>
 
-<script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/index.js"></script>
-<script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"> </script>
+<script type="text/babel">
+  const webContent = {
+    banner: [
+      {
+        id: "title",
+        content: `Hayden Yap`
+      },
+      {
+        id: "descriptors",
+        content: `Aspiring Web Developer, Tech Enthusiast, and Gamer`
+      }
+    ],
+    about: [
+      {
+        id: "gen",
+        content:
+        `
+        Hello I'm Hayden Yap, welcome to my personal website. I am a Computer Science Student studying at the
+        <a href="https://uwaterloo.ca/"><b>University Of Waterloo</b></a>. I've had a keen interest in computers since the 8th
+        grade. It started off as an interest in hardware specifically since I built my first computer at around that time.
+        Towards the end of my junior year, I started to learn Java using the Ready to Program IDE. Since then, coding has
+        transcended from simply a hobby to a career path.
+        `
+      },
+      {
+        id: "webDev",
+        content:
+        `
+        I learned a minimal amount of HTML in senior year and did not revisit the topic until late 2017. Since then, I've learned
+        how to use CSS and JavaScript to create more modern looking webpages. Recently I started to learn various libraries such as
+        Bootstrap, jQuery, React and Redux to further my skils in web development.
+        `
+      },
+      {
+        id: "game",
+        content:
+        `
+        Some people love movies and some love TV series. Everyone has their favourite form of entertainment which to them,
+        trumps all others.For me, It is games. I am asked quite often why I prefer Games over movies or TV and my answer is always
+        the same: <em>"I can spend $15 on a 2 hour movie or I spend $80 on a game that I can easily spend 100+ hours playing"</em>.
+        `
+      }
+    ]
+  }
+
+  class Text extends React.Component{
+    constructor(props){
+      super(props);
+    }
+
+    render(){
+
+      return(
+        <div id={this.props.payload.id} className={this.props.section+"-text" + " container"} dangerouslySetInnerHTML={{__html: this.props.payload.content}}></div>
+      )
+    }
+  }
+
+  class Section extends React.Component{
+    constructor(props){
+      super(props);
+    }
+
+    render(){
+      const content = this.props.payload.map(function(load){
+        return (
+          <Text key={this.props.sectionName+"-"+load.id} section={this.props.sectionName} payload={load}/>
+        )
+      },this)
+      return(
+        <div id={this.props.sectionName}>
+          {content}
+        </div>
+      )
+    }
+  }
+
+class Root extends React.Component{
+  constructor(props){
+    super(props);
+
+  }
+
+  render(){
+    return(
+      <div id="rootContent" className="container-fluid">
+        <Section payload={webContent.banner} sectionName="banner"/>
+        <Section payload={webContent.about} sectionName="about" />
+      </div>
+    )
+  }
+}
+
+  $(document).ready(function(){
+    for (var key in webContent){
+      $("#" + key).css("min-height","50%");
+    }
+  })
+
+  ReactDOM.render(<Root />, document.getElementById('root'))
+</script>
+
+<script type="text/babel">
+const nav =[
+  {
+    name: "Hayden Yap",
+    keyID: "hayden-yap",
+    href: "http://haydenyap.com/",
+    target:"_self",
+    subCat: null
+  },
+  {
+    name: "Projects",
+    keyID: "projects",
+    href: "#",
+    subCat: [
+      {
+        name: "Web Apps",
+        keyID: "web-apps",
+        href: "#",
+        subCat: null
+      },
+      {
+        name: "Web Pages",
+        keyID: "web-pages",
+        href: "#",
+        subCat: [
+          {
+            name: "Survey Page",
+            keyID: "survey-page",
+            href: "/projects/Web-Pages/Survey-Form-Page/index.html",
+            target: "_self",
+            subCat: null
+          },
+          {
+            name: "Technical Documentation Page",
+            keyID: "technical-documentation-page",
+            href: "/projects/Web-Pages/Technical-Documentation-Page/index.html",
+            target: "_self",
+            subCat: null
+          },
+          {
+            name: "Tribute Page",
+            keyID: "tribute-page",
+            href: "/projects/Web-Pages/Tribute-Page/index.html",
+            target: "_self",
+            subCat: null
+          }
+        ]
+      }
+    ]
+  },
+  {
+    name: "Resume",
+    keyID: "resume",
+    href: "images/Resume.pdf",
+    target: "_blank",
+    subCat: null
+  },
+  {
+    name: "GitHub",
+    keyID: "github",
+    href: "https://github.com/HaydenYap",
+    target: "_blank",
+    subCat: null
+  },
+  {
+    name: "linkedIn",
+    keyID: "linkedIn",
+    href: "https://www.linkedin.com/in/hayden-yap-51715bba/",
+    target:"_blank",
+    subCat: null
+  }
+]
+
+class Drop extends React.Component{
+  constructor(props){
+    super(props);
+  }
+
+  render(){
+    const dropButtons = this.props.subCat.map(function(button){
+      if (button.subCat == null){
+        return(
+          <li key={button.keyID} className="dropdown-item">
+            <a className="dropdown-link" href={button.href} target={button.target}>{button.name}</a>
+          </li>
+        )
+      } else {
+        return(
+          <li key={button.keyID} className="dropdown-item dropdown-sub dropright">
+            <a className="sub-menu dropdown-link dropdown-toggle" data-toggle="drop">{button.name}</a>
+            <Drop subCat={button.subCat} />
+          </li>
+        )
+      }
+    })
+    return(
+      <ul className="dropdown-menu">
+        {dropButtons}
+      </ul>
+    )
+  }
+}
+
+class Nav extends React.Component{
+  constructor(props){
+    super(props);
+  }
+
+  render(){
+    const mainNavButtons = nav.map(function(button){
+      if (button.subCat == null){
+        return(
+          <li key={button.keyID} className="nav-item">
+            <a className="nav-link" href={button.href}>{button.name}</a>
+          </li>
+        )
+      } else {
+        return(
+          <li key={button.keyID} className="nav-item dropdown">
+            <a className="nav-link dropdown-toggle" data-toggle="dropdown">{button.name}</a>
+            <Drop subCat={button.subCat}/>
+          </li>
+        )
+      }
+    })
+    return(
+      <div id="navigation" className="navbar navbar-expand-sm fixed-top">
+        <ul className="navbar-nav">
+          {mainNavButtons}
+        </ul>
+      </div>
+    )
+  }
+}
+
+$(document).ready(function(){
+  topPadding()
+  $('.dropdown-sub a.sub-menu').on("click", function(e){
+    $(this).next('ul').toggle();
+    e.stopPropagation();
+  });
+});
+
+$(window).resize(function(){
+  topPadding()
+})
+
+const topPadding = () =>{
+  var currentHeight = document.getElementById('navigation').clientHeight
+  $('#root').css("padding-top",currentHeight + "px")
+}
+
+ReactDOM.render(<Nav />, document.getElementById("nav"))
+</script>
