--- a/nav.html
+++ b/nav.html
@@ -1,18 +1,167 @@
 <head>
-  <link rel="stylesheet" href="css/nav.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.0/redux.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.7/react-redux.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/projectsInfo.css">
+  <link rel="stylesheet" href="css/newNav.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+  integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
 </head>
 
-<div id="nav">
-<!-- This file is just a test file for individual development of the navigation bar-->
-</div>
+<div id="nav"></div>
 
-<script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"></script>
+<script type="text/babel">
+const nav =[
+  {
+    name: "Hayden Yap",
+    keyID: "hayden-yap",
+    href: "http://haydenyap.com/",
+    target:"_self",
+    subCat: null
+  },
+  {
+    name: "Projects",
+    keyID: "projects",
+    href: "#",
+    subCat: [
+      {
+        name: "Web Apps",
+        keyID: "web-apps",
+        href: "#",
+        subCat: null
+      },
+      {
+        name: "Web Pages",
+        keyID: "web-pages",
+        href: "#",
+        subCat: [
+          {
+            name: "Survey Page",
+            keyID: "survey-page",
+            href: "/projects/Web-Pages/Survey-Form-Page/index.html",
+            target: "_self",
+            subCat: null
+          },
+          {
+            name: "Technical Documentation Page",
+            keyID: "technical-documentation-page",
+            href: "/projects/Web-Pages/Technical-Documentation-Page/index.html",
+            target: "_self",
+            subCat: null
+          },
+          {
+            name: "Tribute Page",
+            keyID: "tribute-page",
+            href: "/projects/Web-Pages/Tribute-Page/index.html",
+            target: "_self",
+            subCat: null
+          }
+        ]
+      }
+    ]
+  },
+  {
+    name: "Resume",
+    keyID: "resume",
+    href: "images/Resume.pdf",
+    target: "_blank",
+    subCat: null
+  },
+  {
+    name: "GitHub",
+    keyID: "github",
+    href: "https://github.com/HaydenYap",
+    target: "_blank",
+    subCat: null
+  },
+  {
+    name: "linkedIn",
+    keyID: "linkedIn",
+    href: "https://www.linkedin.com/in/hayden-yap-51715bba/",
+    target:"_blank",
+    subCat: null
+  }
+]
+
+class Drop extends React.Component{
+  constructor(props){
+    super(props);
+  }
+
+  render(){
+    const dropButtons = this.props.subCat.map(function(button){
+      if (button.subCat == null){
+        return(
+          <li key={button.keyID} className="dropdown-item">
+            <a className="dropdown-link" href={button.href} target={button.target}>{button.name}</a>
+          </li>
+        )
+      } else {
+        return(
+          <li key={button.keyID} className="dropdown-item dropdown-sub dropright">
+            <a className="sub-menu dropdown-link dropdown-toggle" data-toggle="drop">{button.name}</a>
+            <Drop subCat={button.subCat} />
+          </li>
+        )
+      }
+    })
+    return(
+      <ul className="dropdown-menu">
+        {dropButtons}
+      </ul>
+    )
+  }
+}
+
+class Nav extends React.Component{
+  constructor(props){
+    super(props);
+  }
+
+  render(){
+    const mainNavButtons = nav.map(function(button){
+      if (button.subCat == null){
+        return(
+          <li key={button.keyID} className="nav-item">
+            <a className="nav-link" href={button.href}>{button.name}</a>
+          </li>
+        )
+      } else {
+        return(
+          <li key={button.keyID} className="nav-item dropdown">
+            <a className="nav-link dropdown-toggle" data-toggle="dropdown">{button.name}</a>
+            <Drop subCat={button.subCat}/>
+          </li>
+        )
+      }
+    })
+    return(
+      <div className="navbar navbar-expand-sm fixed-top">
+        <ul className="navbar-nav">
+          {mainNavButtons}
+        </ul>
+      </div>
+    )
+  }
+}
+
+$(document).ready(function(){
+  $('.dropdown-sub a.sub-menu').on("click", function(e){
+    $(this).next('ul').toggle();
+    e.stopPropagation();
+  });
+});
+
+ReactDOM.render(<Nav />, document.getElementById("nav"))
+</script>
