--- a/projects/Web-Apps/Drum-machine/index.html
+++ b/projects/Web-Apps/Drum-machine/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <div id="nav"></div>
-<div id="app"></div>
+<div id="root"></div>
 
 <script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/projects/Web-Apps/Drum-machine/scripts/drum.js"></script>
 <script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"> </script>
