--- a/projects/Web-Apps/Markdown-Previewer/index.html
+++ b/projects/Web-Apps/Markdown-Previewer/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <div id="nav"></div>
-<div id="app"></div>
+<div id="root"></div>
 
 <script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/projects/Web-Apps/Markdown-Previewer/scripts/markdown.js"></script>
 <script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"> </script>
