--- a/projects/Web-Apps/Random-Quote-Machine/index.html
+++ b/projects/Web-Apps/Random-Quote-Machine/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <div id="nav"></div>
-<div id="quote-app">
+<div id="root">
   <div id="quote-box" class="center">
     <div id="content">
       <div id="quote-info">
