A lot of changes
created new nav bar, tested all web pages to make sure they were compatible with new nev bar. started to work on projects info page for web apps.

--- a/nav.html
+++ b/nav.html
@@ -12,8 +12,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/projectsInfo.css">
-  <link rel="stylesheet" href="css/newNav.css">
+  <link rel="stylesheet" type="text/css" href="css/projectsInfo.css">
+  <link rel="stylesheet" type="text/css" href="css/nav.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
   integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
@@ -21,147 +21,4 @@
 
 <div id="nav"></div>
 
-<script type="text/babel">
-const nav =[
-  {
-    name: "Hayden Yap",
-    keyID: "hayden-yap",
-    href: "http://haydenyap.com/",
-    target:"_self",
-    subCat: null
-  },
-  {
-    name: "Projects",
-    keyID: "projects",
-    href: "#",
-    subCat: [
-      {
-        name: "Web Apps",
-        keyID: "web-apps",
-        href: "#",
-        subCat: null
-      },
-      {
-        name: "Web Pages",
-        keyID: "web-pages",
-        href: "#",
-        subCat: [
-          {
-            name: "Survey Page",
-            keyID: "survey-page",
-            href: "/projects/Web-Pages/Survey-Form-Page/index.html",
-            target: "_self",
-            subCat: null
-          },
-          {
-            name: "Technical Documentation Page",
-            keyID: "technical-documentation-page",
-            href: "/projects/Web-Pages/Technical-Documentation-Page/index.html",
-            target: "_self",
-            subCat: null
-          },
-          {
-            name: "Tribute Page",
-            keyID: "tribute-page",
-            href: "/projects/Web-Pages/Tribute-Page/index.html",
-            target: "_self",
-            subCat: null
-          }
-        ]
-      }
-    ]
-  },
-  {
-    name: "Resume",
-    keyID: "resume",
-    href: "images/Resume.pdf",
-    target: "_blank",
-    subCat: null
-  },
-  {
-    name: "GitHub",
-    keyID: "github",
-    href: "https://github.com/HaydenYap",
-    target: "_blank",
-    subCat: null
-  },
-  {
-    name: "linkedIn",
-    keyID: "linkedIn",
-    href: "https://www.linkedin.com/in/hayden-yap-51715bba/",
-    target:"_blank",
-    subCat: null
-  }
-]
-
-class Drop extends React.Component{
-  constructor(props){
-    super(props);
-  }
-
-  render(){
-    const dropButtons = this.props.subCat.map(function(button){
-      if (button.subCat == null){
-        return(
-          <li key={button.keyID} className="dropdown-item">
-            <a className="dropdown-link" href={button.href} target={button.target}>{button.name}</a>
-          </li>
-        )
-      } else {
-        return(
-          <li key={button.keyID} className="dropdown-item dropdown-sub dropright">
-            <a className="sub-menu dropdown-link dropdown-toggle" data-toggle="drop">{button.name}</a>
-            <Drop subCat={button.subCat} />
-          </li>
-        )
-      }
-    })
-    return(
-      <ul className="dropdown-menu">
-        {dropButtons}
-      </ul>
-    )
-  }
-}
-
-class Nav extends React.Component{
-  constructor(props){
-    super(props);
-  }
-
-  render(){
-    const mainNavButtons = nav.map(function(button){
-      if (button.subCat == null){
-        return(
-          <li key={button.keyID} className="nav-item">
-            <a className="nav-link" href={button.href}>{button.name}</a>
-          </li>
-        )
-      } else {
-        return(
-          <li key={button.keyID} className="nav-item dropdown">
-            <a className="nav-link dropdown-toggle" data-toggle="dropdown">{button.name}</a>
-            <Drop subCat={button.subCat}/>
-          </li>
-        )
-      }
-    })
-    return(
-      <div className="navbar navbar-expand-sm fixed-top">
-        <ul className="navbar-nav">
-          {mainNavButtons}
-        </ul>
-      </div>
-    )
-  }
-}
-
-$(document).ready(function(){
-  $('.dropdown-sub a.sub-menu').on("click", function(e){
-    $(this).next('ul').toggle();
-    e.stopPropagation();
-  });
-});
-
-ReactDOM.render(<Nav />, document.getElementById("nav"))
-</script>
+<script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"></script>
